# revolt-chess-bot-rs

./: Cargo.toml  README.md
command-help/: chess.md  help.md  intro.md
src/: lib.rs  main.rs
src/commands/: chess.rs  help.rs  mod.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  unban.rs
