[package]
name = "revolt-chess-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chess = "3.2.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
reywen = { git = "https://www.github.com/Toastxc/Reywen-Revolt.git" }
reywen_http = "0.1.16"
rust-embed = { version = "8.0.0", features = ["include-exclude"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "fs"] }
